--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "symfony/framework-bundle": "^6.0|^7.0",
         "symfony/messenger": "^7.2",
         "basis-company/nats": "^1.0",
-        "symfony/uid": "^7.2"
+        "symfony/uid": "^7.2",
+        "symfony/serializer": "^7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
