--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     },
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^6.0|^7.0",
-        "symfony/messenger": "^7.2",
+        "symfony/framework-bundle": "^6.0|^7.0|^8.0",
+        "symfony/messenger": "^7.2|^8.0",
         "basis-company/nats": "^1.0",
-        "symfony/uid": "^7.2",
-        "symfony/serializer": "^7.2"
+        "symfony/uid": "^7.2|^8.0",
+        "symfony/serializer": "^7.2|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
